Add draft of first post

--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,4 +1,6 @@
 <div class="page-header">
+  <center><p>بسم الله الرحمن الرحيم</p></center>
+  <hr>
   <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 </div>
 
