--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -9,6 +9,16 @@
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script src="js/jquery.js"></script>
+    <script>
+      $(window).load(function() {
+        if (window.location.hash == "#thanks") {
+          $(".signup").hide();
+          $(".thanks").show();
+        }
+      });
+    </script>
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -17,6 +27,7 @@
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ ASSET_PATH }}/css/dc.css?body=1" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
@@ -33,10 +44,17 @@
   </head>
 
   <body>
+    <div class="basmallah">
+      <center><a href="/">بسم الله الرحمن الرحيم</a></center>
+    </div>
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
+	  {% if page.category %}
+          <a class="brand" href="/categories.html#{{ page.category }}-ref">{{ page.category }}</a>
+	  {% else %}
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+	  {% endif %}
           <ul class="nav">
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
@@ -45,6 +63,7 @@
         </div>
       </div>
     </div>
+
 
     <div class="container-narrow">
 
