--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -1,9 +1,14 @@
 <div class="page-header">
+{% if page.hidetitle != true %}
+  <hr>
   <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
+{% endif %}
 </div>
 
 <div class="row-fluid">
-  <div class="span12">
+  <div class="span2"></div>
+  <div class="span8">
     {{ content }}
   </div>
+  <div class="span2"></div>
 </div>
