--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -2,10 +2,12 @@
         padding-top: 0px;
         padding-bottom: 40px;
         font-size: 12pt;
+	font-family: 'Neuzeit Grotesk Bold';
       }
 
       p, ul, li {
-        font-family: verdana;
+        /* font-family: verdana; */
+	  font-family: 'Sabon Roman';
       }
 
       .basmallah {
