Make font weight normal

--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -3,6 +3,7 @@
         padding-bottom: 40px;
         font-size: 12pt;
 	font-family: 'Neuzeit Grotesk Bold';
+	font-weight: normal;
       }
 
       p, ul, li {
