Don't make things bold that are already bold

--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -3,6 +3,9 @@
         padding-bottom: 40px;
         font-size: 12pt;
 	font-family: 'Neuzeit Grotesk Bold';
+      }
+
+      h1, h2, h3, h4, h5, h6 {
 	font-weight: normal;
       }
 
