--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -5,7 +5,7 @@
 	font-family: 'Sabon Roman';
       }
 
-      h1, h2, h3, h4, h5, h6, nav.li {
+      h1, h2, h3, h4, h5, h6, .nav li {
 	font-family: 'Neuzeit Grotesk Bold';
 	font-weight: normal;
       }
