--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -23,11 +23,16 @@
 	  border-radius: 3px;
 	  text-decoration: none;
       }
+
+      .navbar-inner {
+	  border: none;
+	  background: none;
+      }
       
       /* Custom container */
       .container-narrow {
         margin: 0 auto;
-        max-width: 700px;
+        max-width: 500px;
       }
       .container-narrow > hr {
         margin: 30px 0;
@@ -54,3 +59,5 @@
       .marketing p + h4 {
         margin-top: 28px;
       }
+
+      
