Make the background colour more subtle

--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -3,7 +3,7 @@
         padding-bottom: 40px;
         font-size: 12pt;
 	font-family: 'Sabon Roman';
-	background-color: #e6e3ef;
+	background-color: #f9f7ff;
      }
 
       h1, h2, h3, h4, h5, h6, input, button, .navbar {
