--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -6,11 +6,12 @@
 	background-color: #f9f7ff;
      }
 
-      h1, h2, h3, h4, h5, h6, input, button, .navbar {
+      h1, h2, h3, h4, h5, h6, input, button, .navbar, .navbar .brand {
 	font-family: 'Neuzeit Grotesk Bold';
 	font-weight: normal;
 	color: #241b47;
       }
+
 
       /* p, ul, li { */
       /*   font-family: verdana; */
