Change the font again

--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -19,7 +19,7 @@
 
       .basmallah {
         margin: 3px;
-	font-family: 'Amiri', serif;
+	font-family: 'Harmattan', sans-serif;
       }
 
       .basmallah a {
