--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -8,7 +8,8 @@
 
      h1, h2, h3, h4, h5, h6, input, button, .navbar, .navbar .brand,
      .navbar .nav>.active>a, .navbar .nav>.active>a:hover, .navbar .nav>.active>a:focus {
-	font-family: 'Neuzeit Grotesk Bold';
+	/* font-family: 'Neuzeit Grotesk Bold'; */
+	font-family: 'Lato', sans-serif;
 	font-weight: normal;
 	color: #241b47;
 	background: none;
