--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -9,7 +9,7 @@
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Harmattan" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin:600" rel="stylesheet">
     
     <script type="text/javascript">
       (function() {
