--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -10,7 +10,7 @@
      .navbar .nav>.active>a, .navbar .nav>.active>a:hover, .navbar .nav>.active>a:focus {
 	/* font-family: 'Neuzeit Grotesk Bold'; */
 	font-family: 'Cabin', sans-serif;
-	font-weight: bold;
+	font-weight: 600;
 	color: #241b47;
 	background: none;
 	box-shadow: none;
