Justify and hyphenate paragraphs

--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -16,6 +16,10 @@
 	box-shadow: none;
       }
 
+     p {
+	 text-align: justify;
+	 hyphens: auto;
+     }
 
       /* p, ul, li { */
       /*   font-family: verdana; */
