Just use free fonts

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -8,30 +8,8 @@
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Harmattan" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cabin:600" rel="stylesheet">
-    
-    <script type="text/javascript">
-      (function() {
-      var trial = document.createElement('script');
-      trial.type = 'text/javascript';
-      trial.async = true;
-      trial.src = 'https://easy.myfonts.net/v2/js?sid=5071(font-family=Neuzeit+Grotesk+Bold)&key=jtlzckcHwI';
-      var head = document.getElementsByTagName("head")[0];
-      head.appendChild(trial);
-      })();
-    </script>
-    <script type="text/javascript">
-      (function() {
-      var trial = document.createElement('script');
-      trial.type = 'text/javascript';
-      trial.async = true;
-      trial.src = 'https://easy.myfonts.net/v2/js?sid=10383(font-family=Sabon+Roman)&sid=10385(font-family=Sabon+Bold)&key=3vxbW8Dh1d';
-      var head = document.getElementsByTagName("head")[0];
-      head.appendChild(trial);
-      })();
-    </script>
-    
+    <link href="https://fonts.googleapis.com/css?family=Cabin|Cormorant|Harmattan" rel="stylesheet">
+        
     <script src="js/jquery.js"></script>
     <script>
       $(window).load(function() {
