--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -2,7 +2,7 @@
         padding-top: 0px;
         padding-bottom: 40px;
         font-size: 12pt;
-	font-family: 'Cormorant';
+	font-family: 'Cormorant Garamond';
 	background-color: #f9f7ff;
      }
 
