Specify language as English

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -44,7 +44,7 @@
 
   </head>
 
-  <body>
+  <body lang="en">
     <div class="basmallah">
       <center><a href="/">بسم الله الرحمن الرحيم</a></center>
     </div>
