--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -2,14 +2,15 @@
         padding-top: 0px;
         padding-bottom: 40px;
         font-size: 14pt;
-	font-family: 'Cormorant Garamond';
-	background-color: #f9f7ff;
+          font-family: 'monospace';
+          background-color: #f9f7ff;
+          line-height: 1.5;
      }
 
      h1, h2, h3, h4, h5, h6, input, button, .navbar, .navbar .brand,
      .navbar .nav>.active>a, .navbar .nav>.active>a:hover, .navbar .nav>.active>a:focus {
 	/* font-family: 'Neuzeit Grotesk Bold'; */
-	font-family: 'Cabin', sans-serif;
+	font-family: sans-serif;
 	font-weight: 600;
 	color: #241b47;
 	background: none;
@@ -17,7 +18,7 @@
       }
 
      p, .content li {
-	 text-align: justify;
+	 /*text-align: justify;*/
 	 hyphens: auto;
      }
 
@@ -27,7 +28,7 @@
 
       .basmallah {
         margin: 3px;
-	font-family: 'Harmattan', sans-serif;
+          font-family: sans-serif;
       }
 
       .basmallah a {
@@ -45,7 +46,7 @@
       /* Custom container */
       .container-narrow {
         margin: 0 auto;
-        max-width: 500px;
+        max-width: 1024px;
       }
       .container-narrow > hr {
         margin: 30px 0;
