--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -1,7 +1,7 @@
       body {
         padding-top: 0px;
         padding-bottom: 40px;
-        font-size: 14pt;
+        font-size: medium;
           font-family: 'monospace';
           background-color: #f9f7ff;
           line-height: 1.5;
@@ -81,4 +81,17 @@
       a:hover, .navbar .nav>li>a:hover {
 	  color: #8463ff;
 	  text-decoration: none;
+      }
+
+      .article-title {
+          margin-bottom: 5px;
+      }
+
+      .timestamp {
+          font-size: small;
+          margin-bottom: 20px;
+      }
+
+      .page-header {
+          border: 0px;
       }
