--- a/assets/themes/twitter/css/dc.css
+++ b/assets/themes/twitter/css/dc.css
@@ -7,6 +7,10 @@
           line-height: 1.5;
      }
 
+      li {
+          line-height: 1.5;
+      }
+
      h1, h2, h3, h4, h5, h6, input, button, .navbar, .navbar .brand,
      .navbar .nav>.active>a, .navbar .nav>.active>a:hover, .navbar .nav>.active>a:focus {
 	/* font-family: 'Neuzeit Grotesk Bold'; */
